# rift

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: analyze_output_tokens.py  context_rot_opus47.md  context_rot_opus47_analysis.md  context_rot_outcomes.yaml  extraction_drift.md  extraction_opus4_drift.md  generate_synthetic_outcomes.py  opus47_live.md  run_context_rot.py  smoketest_live.json  smoketest_live.md
src/rift/: __init__.py  calibration.py  cli.py  comparator.py  config.py  context_rot.py  discovery.py  output_tokens.py  pricing.py  refusal.py  reporter.py  runner.py  sycophancy.py
src/rift/providers/: __init__.py  anthropic.py  openai.py
src/rift/scoring/: __init__.py  exact_match.py  f1.py  fuzzy_match.py  llm_judge.py  semantic.py
suites/: code_generation.yaml  context_rot_reasoning.yaml  extraction.yaml  open_ended_qa.yaml  reasoning.yaml  summarization.yaml
tests/: test_calibration.py  test_comparator.py  test_comparator_advanced.py  test_config.py  test_context_rot.py  test_discovery.py  test_effect_size_power.py  test_llm_judge.py  test_output_tokens.py  test_pricing.py  test_refusal.py  test_scoring.py  test_sycophancy.py
